--- a/paper.bib
+++ b/paper.bib
@@ -1,3 +1,27 @@
+
+@article{berg_ilastik_2019,
+	title = {ilastik: interactive machine learning for (bio)image analysis},
+	volume = {16},
+	rights = {2019 The Author(s), under exclusive licence to Springer Nature America, Inc.},
+	issn = {1548-7105},
+	url = {https://www.nature.com/articles/s41592-019-0582-9},
+	doi = {10.1038/s41592-019-0582-9},
+	shorttitle = {ilastik},
+	abstract = {We present ilastik, an easy-to-use interactive tool that brings machine-learning-based (bio)image analysis to end users without substantial computational expertise. It contains pre-defined workflows for image segmentation, object classification, counting and tracking. Users adapt the workflows to the problem at hand by interactively providing sparse training annotations for a nonlinear classifier. ilastik can process data in up to five dimensions (3D, time and number of channels). Its computational back end runs operations on-demand wherever possible, allowing for interactive prediction on data larger than {RAM}. Once the classifiers are trained, ilastik workflows can be applied to new data from the command line without further user interaction. We describe all ilastik workflows in detail, including three case studies and a discussion on the expected performance.},
+	pages = {1226--1232},
+	number = {12},
+	journaltitle = {Nature Methods},
+	shortjournal = {Nat Methods},
+	author = {Berg, Stuart and Kutra, Dominik and Kroeger, Thorben and Straehle, Christoph N. and Kausler, Bernhard X. and Haubold, Carsten and Schiegg, Martin and Ales, Janez and Beier, Thorsten and Rudy, Markus and Eren, Kemal and Cervantes, Jaime I. and Xu, Buote and Beuttenmueller, Fynn and Wolny, Adrian and Zhang, Chong and Koethe, Ullrich and Hamprecht, Fred A. and Kreshuk, Anna},
+	urldate = {2023-07-28},
+	date = {2019-12},
+	langid = {english},
+	note = {Number: 12
+Publisher: Nature Publishing Group},
+	keywords = {Image processing, Machine learning, Software},
+	file = {Berg et al_2019_ilastik.pdf:/Users/benjaminr/Library/CloudStorage/OneDrive-UGent/Zotero/Berg et al_2019_ilastik.pdf:application/pdf},
+}
+
 @article{marconato_spatialdata_2024,
 	title = {{SpatialData}: an open and universal data framework for spatial omics},
 	rights = {2024 The Author(s)},
@@ -14,6 +38,26 @@
 	date = {2024-03-20},
 	langid = {english},
 	note = {Publisher: Nature Publishing Group},
-	keywords = {Software, Data integration, Computational platforms and environments, Molecular imaging},
+	keywords = {Computational platforms and environments, Data integration, Molecular imaging, Software},
 	file = {Marconato et al_2024_SpatialData.pdf:/Users/benjaminr/Library/CloudStorage/OneDrive-UGent/Zotero/Marconato et al_2024_SpatialData.pdf:application/pdf},
+}
+
+@article{virshup_scverse_2023,
+	title = {The scverse project provides a computational ecosystem for single-cell omics data analysis},
+	volume = {41},
+	rights = {2023 The Author(s), under exclusive licence to Springer Nature America, Inc.},
+	issn = {1546-1696},
+	url = {https://www.nature.com/articles/s41587-023-01733-8},
+	doi = {10.1038/s41587-023-01733-8},
+	pages = {604--606},
+	number = {5},
+	journaltitle = {Nature Biotechnology},
+	shortjournal = {Nat Biotechnol},
+	author = {Virshup, Isaac and Bredikhin, Danila and Heumos, Lukas and Palla, Giovanni and Sturm, Gregor and Gayoso, Adam and Kats, Ilia and Koutrouli, Mikaela and Berger, Bonnie and Pe’er, Dana and Regev, Aviv and Teichmann, Sarah A. and Finotello, Francesca and Wolf, F. Alexander and Yosef, Nir and Stegle, Oliver and Theis, Fabian J.},
+	urldate = {2024-06-06},
+	date = {2023-05},
+	langid = {english},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {Bioinformatics, Computational platforms and environments, Machine learning, Software},
+	file = {Full Text PDF:/Users/benjaminr/Zotero/storage/MCGDP6HL/Virshup et al. - 2023 - The scverse project provides a computational ecosy.pdf:application/pdf},
 }
