Added Multi-omics morphology results

--- a/paper.bib
+++ b/paper.bib
@@ -274,3 +274,21 @@
   note       = {Pages: 2022.04.14.488259
                 Section: New Results}
 }
+
+@article{chen_towards_2024,
+	title = {Towards a general-purpose foundation model for computational pathology},
+	volume = {30},
+	copyright = {2024 The Author(s), under exclusive licence to Springer Nature America, Inc.},
+	issn = {1546-170X},
+	url = {https://www.nature.com/articles/s41591-024-02857-3},
+	doi = {10.1038/s41591-024-02857-3},
+	number = {3},
+	urldate = {2024-06-21},
+	journal = {Nature Medicine},
+	author = {Chen, Richard J. and Ding, Tong and Lu, Ming Y. and Williamson, Drew F. K. and Jaume, Guillaume and Song, Andrew H. and Chen, Bowen and Zhang, Andrew and Shao, Daniel and Shaban, Muhammad and Williams, Mane and Oldenburg, Lukas and Weishaupt, Luca L. and Wang, Judy J. and Vaidya, Anurag and Le, Long Phi and Gerber, Georg and Sahai, Sharifa and Williams, Walt and Mahmood, Faisal},
+	month = mar,
+	year = {2024},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {Biomedical engineering, Machine learning, Pathology},
+	pages = {850--862},
+}
